# openenv-rl-environment

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  PRD.md  README.md  evaluate.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: openenv-validation.yml
env/: environment.py  graders.py  models.py  tasks.py
scripts/: validate_submission.sh
server/: app.py
tests/: conftest.py  test_environment.py  test_graders.py
